SmilatticeScript to WildDoc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "semilattice-server"
+name = "wild-doc-server"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+wild-doc={path="../wild-doc" , version="0.3"}
