for Pre-release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,18 @@
 [package]
 name = "wild-doc-server"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Oden Shirataki <oden.srtk@gmail.com>"]
+
+description = "This is still in development."
+
+repository = "https://github.com/OdenShirataki/wild-doc-server"
+
+keywords = ["database","javascript","v8","xml","html"]
+categories = ["database","database-implementations","Text processing","Web programming","Template engine"]
+
+license = "MIT/Apache-2.0"
 
 [dependencies]
-wild-doc={path="../wild-doc" , version="0.3"}
+wild-doc={path="../wild-doc" , version="0.5"}
