--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wild-doc-server"
-version = "0.0.0"
+version = "0.0.1"
 edition = "2021"
 
 authors = ["Oden Shirataki <oden.srtk@gmail.com>"]
@@ -10,9 +10,9 @@ description = "This is still in development."
 repository = "https://github.com/OdenShirataki/wild-doc-server"
 
 keywords = ["database","javascript","v8","xml","html"]
-categories = ["database","database-implementations","Text processing","Web programming","Template engine"]
+categories = ["database-implementations","network-programming","template-engine"]
 
 license = "MIT/Apache-2.0"
 
 [dependencies]
-wild-doc={path="../wild-doc" , version="0.5"}
+wild-doc={path="../wild-doc" , version="0.6"}
