--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wild-doc-server"
-version = "0.0.2"
+version = "0.0.3"
 edition = "2021"
 
 authors = ["Oden Shirataki <oden.srtk@gmail.com>"]
@@ -15,4 +15,7 @@ categories = ["database-implementations","network-programming","template-engine"
 license = "MIT/Apache-2.0"
 
 [dependencies]
+toml = "0.5"
+serde = "1.0"
+serde_derive = "1.0"
 wild-doc={path="../wild-doc" , version="0.6"}
